--- a/vk-ass2.qmd
+++ b/vk-ass2.qmd
@@ -33,25 +33,32 @@ print(wald_conf_intervals)
 
 ```{r}
 
-neg_log_likelihood <- function(params, X , y){
+log_lik <- function(params, X , y){
   beta0 <- params[1]
   beta1 <- params[2]
   
-  log_likelyhood = sum(-log(1 + exp(beta0 + beta1*X))+ y * (beta0 + beta1*X))
-  return (-log_likelyhood)
+  log_likelyhood <- sum(-log(1 + exp(beta0 + beta1*X))+ y * (beta0 + beta1*X))
+  return (log_likelyhood)
 }
 
 init_param <- c(0,0)
 result <- optim(par = init_param, 
-                fn  = neg_log_likelihood,
+                fn  = log_lik,
                 X = data$log_gdp,
                 y = data$high_lifeExp,
-                method = "BFGS",
+                method = "BFGS", # no constraint
+                control = list(fnscale = -1), # maximized instead of minimized
                 hessian = TRUE)
-                 
-coef_estimates <- result$par
-names(coef_estimates) <- c("beta0", "beta1")
-coef_estimates
+
+
+# Get MLE of lambda:
+mle <- result$par
+cat("MLE of lambda: ", mle, "\n")
+
+# Get the log-likelihood value at the MLE estimate:
+log_lik_value <- result$value
+cat("Log-Likelihood value at MLE: ", log_lik_value, "\n")
+
 ```
 
 ```{r}
@@ -67,22 +74,21 @@ length <- 200
 beta1_hat <- model$coefficients[2]
 beta0_hat <- model$coefficients[1]
 
-upper_beta1 = beta1_hat +  0.1
-lower_beta1 = beta1_hat -  0.1
+upper_beta1 = beta1_hat +  1
+lower_beta1 = beta1_hat -  0.8
   
-beta1_grid <- seq(lower_beta1 , upper_beta1,length.out = length)
+beta1_grid <- seq(lower_beta1 , upper_beta1, 0.0001)
 beta1_likelihood_grid <- numeric(length)
 
-for(i in seq_along(beta1_grid)) {
+for(i in 1 : length(beta1_grid)) {
   beta1 <- beta1_grid[i]
   params <- c(beta0_hat,beta1)
 
-  beta1_likelihood_grid[i] <- -1 * neg_log_likelihood(params = params,
+  beta1_likelihood_grid[i] <- log_lik(params = params,
                                                       X = data$log_gdp,
                                                       y = data$high_lifeExp)
 }
 
-print(beta1_likelihood_grid)
 
 plot(beta1_grid, beta1_likelihood_grid, 
      type = "l",                      # line plot
@@ -91,10 +97,10 @@ plot(beta1_grid, beta1_likelihood_grid,
      xlab = expression(beta[1]),     # x-axis label with math notation
      ylab = "Likelihood",            # y-axis label
      main = "Likelihood vs Beta1")   # plot title
-
+ 
 # Add a vertical dashed blue line at beta1 = 1.591683
-abline(v = 1.591683, col = "blue", lty = 3, lwd = 2)
-abline(v = 3.106073, col = "blue", lty = 3, lwd = 2)
+#abline(v = 1.591683, col = "blue", lty = 3, lwd = 2)
+#abline(v = 3.106073, col = "blue", lty = 3, lwd = 2)
 abline(v =  1.68580, col = "red", lty = 3, lwd = 2)
 abline(v = 3.219953, col = "red", lty = 3, lwd = 2)
 abline(v = beta1_hat, col = 'black',lty = 3, lwd = 2)
@@ -106,9 +112,6 @@ max_log_likelihood <- max(beta1_likelihood_grid)
 From the graphic, $\hat\beta1$ profile likelihood curve show a relatively broad and wide curve around it's maximum. This indicated that there is a moderate amount of uncertainty in estimating the true values of $\beta1$. Looking at the 95 confidence interval cut off we can also see that
 
 ```{r}
-# Your existing code to generate the log-likelihood grid
-# ... (assuming beta1_likelihood_grid and beta1_hat are in your environment)
-# ...
 
 # 1. NORMALIZE THE LIKELIHOOD
 # This creates a grid where the peak is 1
@@ -132,7 +135,6 @@ plot(beta1_grid, normalized_likelihood_grid,
 # On the normalized likelihood scale, this becomes exp(-1.92)
 cutoff_normalized <- exp(-qchisq(0.95, df = 1) / 2)
 abline(h = cutoff_normalized, col = "green", lty = 2, lwd = 2)
-
 
 # 4. ADD YOUR EXISTING VERTICAL LINES
 abline(v = 1.591683, col = "blue", lty = 3, lwd = 2)
@@ -161,4 +163,16 @@ legend("topright",
 
 ```         
 1.511315   3.545518
+```
+
+```{r}
+plot( data$gdpPercap, data$lifeExp)
+plot( data$log_gdp, data$lifeExp)
+abline(h = median(data$lifeExp))
+plot( data$log_gdp, data$high_lifeExp)
+
+```
+
+```{r}
+summary(lm(data = data, lifeExp ~ log_gdp))
 ```
