--- a/vk-ass2.qmd
+++ b/vk-ass2.qmd
@@ -70,7 +70,7 @@ result$hessian
 ```{r}
 
 # LOG LIKLIHOOD PROFILE
-length <- 200
+length <- 50
 beta1_hat <- model$coefficients[2]
 beta0_hat <- model$coefficients[1]
 
@@ -88,7 +88,6 @@ for(i in 1 : length(beta1_grid)) {
                                                       X = data$log_gdp,
                                                       y = data$high_lifeExp)
 }
-
 
 plot(beta1_grid, beta1_likelihood_grid, 
      type = "l",                      # line plot
@@ -110,6 +109,63 @@ max_log_likelihood <- max(beta1_likelihood_grid)
 ```
 
 From the graphic, $\hat\beta1$ profile likelihood curve show a relatively broad and wide curve around it's maximum. This indicated that there is a moderate amount of uncertainty in estimating the true values of $\beta1$. Looking at the 95 confidence interval cut off we can also see that
+
+```{r}
+# Plot the different beta and the log likelihood for each of the data that we have
+#beta1_grid
+beta0_hat
+# plot 1 liklihood of one data
+beta_loglik_each = numeric(length)
+for (i in 1:length(beta1_grid)){
+  beta1 = beta1_grid[i]
+  beta_loglik_each[i] = log_lik(c(beta0_hat, beta1), data$log_gdp[1],data$high_lifeExp[1])
+}
+
+plot(beta1_grid, beta_loglik_each, 
+     type = "l",                      # line plot
+     col = "darkred",                # line color
+     lwd = 2,                        # line width
+     xlab = expression(beta[1]),     # x-axis label with math notation
+     ylab = "Likelihood",            # y-axis label
+     main = "Likelihood vs Beta1") 
+
+
+```
+
+```{r}
+# Assume: data is your dataset with columns log_gdp and high_lifeExp
+#         log_lik(beta, x, y) is your function to compute the log-likelihood for one point
+
+n <- nrow(data)                     # number of data points
+beta1_grid <- seq(lower_beta1 , upper_beta1, 0.001)  # grid of beta1 values
+beta0_hat <- beta0_hat  # replace with your estimated beta0
+
+# Initialize matrix to store log-likelihoods
+loglik_matrix <- matrix(NA, nrow = length(beta1_grid), ncol = n)
+
+# Compute log-likelihoods
+for (i in 1:length(beta1_grid)) {
+  beta1 <- beta1_grid[i]
+  for (j in 1:n) {
+    loglik_matrix[i, j] <- log_lik(c(beta0_hat, beta1), 
+                                   data$log_gdp[j], 
+                                   data$high_lifeExp[j])
+  }
+}
+
+# Optional: Convert log-likelihoods to actual likelihoods if you want
+likelihood_matrix <- exp(loglik_matrix)
+
+# Plotting
+matplot(beta1_grid, likelihood_matrix, type = "l", lty = 1, lwd = 1.5,
+        col = rainbow(n),
+        xlab = expression(beta[1]),
+        ylab = "Likelihood",
+        main = "Likelihood of Each Data Point vs Beta1",
+        xlim = c(1.5, 3.5))
+legend("topright", legend = paste("Data", 1:n), col = rainbow(n), lty = 1, cex = 0.6)
+
+```
 
 ```{r}
 
@@ -170,6 +226,7 @@ plot( data$gdpPercap, data$lifeExp)
 plot( data$log_gdp, data$lifeExp)
 abline(h = median(data$lifeExp))
 plot( data$log_gdp, data$high_lifeExp)
+
 
 ```
 
